--- a/css/styles.css
+++ b/css/styles.css
@@ -174,10 +174,13 @@ body {
 
 /* #region main1 */
 .main-sec {
+  text-align: center;
   background: #2e2f42;
-  max-width: 1440px;
-  padding-top: 188px;
-  padding-bottom: 188px;
+  /* max-width: 1440px; */
+  /* padding-top: 188px;
+  padding-bottom: 188px; */
+  padding-top: 72px;
+  padding-bottom: 72px;
   box-sizing: border-box;
   margin-right: auto;
   margin-left: auto;
@@ -191,22 +194,27 @@ body {
 }
 
 .glava {
-  max-width: 496px;
+  /* max-width: 496px; */
+  max-width: 216px;
   font-weight: 700;
-  font-size: 56px;
-  line-height: 1.07;
+  /* font-size: 56px; */
+  font-size: 36px;
+  /* line-height: 1.07; */
+  line-height: 1.11;
   margin-right: auto;
   margin-left: auto;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
-  margin-bottom: 48px;
+  /* margin-bottom: 48px; */
+  margin-bottom: 72px;
 }
 
 .centered {
   display: flex;
   align-items: center;
   flex-direction: column;
+  
 }
 
 .but {
@@ -561,16 +569,14 @@ background: #fff;
   letter-spacing: 0.03em;
   color: #4d5ae5;
   text-transform: uppercase;
-
-
 }
 
-.footer-logo {
+.footer-logo{
   /* display: inline-block; */
   display: flex;
-  justify-content: center;
   margin-bottom: 16px;
-  
+  align-items: center;
+  justify-content: center;
 }
 
 .logo-studio {
@@ -580,10 +586,13 @@ background: #fff;
   line-height: 1.17;
   letter-spacing: 0.03em;
   color: #f4f4fd;
+
+  
 }
 
 .foot-par {
-  max-width: 264px;
+  /* max-width: 264px; */
+  max-width: 288px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -594,11 +603,11 @@ background: #fff;
 
 .glad-foot {
   display: flex;
-
   text-align: center;
   gap: 16px;
-/*  */
+
   justify-content: center;
+  align-items: center;
 }
 
 .social-media {
@@ -608,24 +617,21 @@ background: #fff;
   letter-spacing: 0.02em;
   color: #fff;
   margin-bottom: 16px;
-  
-  /*  */
-  display: flex;
-  justify-content: center;
-  margin-top: 72px;
+/* ----- */
+  text-align: center;
 }
 
 .footer-container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between; 
-  /*  */
-  flex-direction:column ;
+  /* align-items: baseline; */
+  align-items: center;
+  flex-direction: column;
+  gap: 72px;
+
 }
 
 .container-one {
   /* margin-right: 120px; */
- 
 }
 
 .container-two {}
@@ -643,16 +649,10 @@ transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* 3 секция футера */
  .container-third {
-  
-  
   /* margin-left: 80px; */
+ 
 }
 .footer-form-text {
-  /* добавтв */
-  display: flex;
-  justify-content: center;
-  margin-top: 72px;
-/*  */
   font-family: "Roboto", sans-serif;
   font-weight: 500;
 font-size: 16px;
@@ -660,9 +660,13 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #fff;
 margin-bottom: 16px;
+/* ===== */
+display: block;
+text-align: center;
+justify-content: center;
 }
 .footer-form {
-  
+  /* display: flex; */
   gap:24px;
   
 }
@@ -679,11 +683,13 @@ border: 1px solid #fff;
 border-radius: 4px;
 /* width: 264px; */
 width: 288px;
-    /*добавив */opacity: 0.3; 
 height: 40px;
 box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 background-color: transparent;
+opacity: 0.3;
 color:#fff;
+
+
 
 }
 
@@ -693,20 +699,16 @@ font-size: 12px;
 line-height: 2;
 letter-spacing: 0.04em;
 color: #fff;
-padding-left: 16px;
+/* padding-left: 16px; */
 } 
 .footer-button {
+  margin-top: 16px;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
 align-items: center;
 justify-content: center;
-/* flex-direction: row; */
-margin-top: 16px;
-margin-right: 78px;
-margin-left: 77px;
-/*  */
-
-
-flex-direction: column;
+flex-direction: row;
 border-radius: 4px;
 padding: 8px 24px;
 min-width: 165px;
@@ -983,7 +985,23 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     max-width: 768px;
     padding: 0 16px;
    }
+                   /* ----------СЕКЦИЯ мейн----------- */
+
+  .main-sec{
     
+    padding-top: 112px;
+    padding-bottom: 112px;
+  }Ї
+
+  .glava {
+    max-width: 496px;
+    font-size: 56px;
+    line-height: 1.07; 
+    margin-bottom: 36px;
+    
+  }
+  
+
    
                    /* ----------СЕКЦИЯ СТРАТЕГИЯ----------- */
    .futures-menu{
@@ -1022,21 +1040,47 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
            /* ----------СЕКЦИЯ ФУТЕР----------- */
 
- .footer-logo  {
-  display: inline-block;
-  
- }
- .glad-foot{
-  justify-content: flex-start;
- }
-
- .social-media{
-  justify-content: flex-start;
- }
- .container-two{
+.footer-container{
+  flex-direction: row;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+    width: 584px;
+    align-items: baseline;
     
- }
+}
+.footer-logo{
+  display: inline-block;
+  text-align: left;
+  margin-right: 0;
+  margin-bottom: 16px;
+  padding: 0;
+}
 
+.social-media{
+  text-align: left;
+}
+
+.footer-form-text{
+  text-align: left;
+  padding: 0;
+}
+.footer-input-form {
+  width: 264px;
+}
+.footer-form{
+  display: flex;
+  
+
+}
+.foot-par {
+  max-width: 264px;
+}
+.footer-button{
+  text-align: center;
+  align-items: center;
+  margin-top: auto;
+  
+}
 
 }
 
@@ -1053,6 +1097,9 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    }
 
 /* ----------СЕКЦИЯ СТРАТЕГИЯ----------- */
+
+
+
 .futures-sec {
   padding-top: 120px;
   padding-bottom: 120px;
@@ -1106,6 +1153,40 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   max-width: 360px;
   width: calc((100% - 48px) / 3);
 }
+.foot{
+  padding-top: 100px;
+padding-bottom: 100px;
+}
+.footer-logo{
+  display: inline-block;
+}  
+.foot-par{
+  max-width: 264px;
+  
+}
+.footer-container{
+  flex-wrap: nowrap;
+    gap: 0;
+    width: 1158px;
+}
+.footer-container {
+  align-items: baseline;
+}
+.container-third{
+  margin-left: 80px;
+}
+.container-one{
+  margin-right: 120px;
+}
+.footer-form{
+  display: flex;
+}
+.footer-input-form{
+  width: 264px;
+}
+.footer-input-form{
+  opacity: 1;
+}
 /* #endregion footer */
 
 }
@@ -1115,7 +1196,13 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     max-width: 264px;
        padding-left: 0;
        padding-right: 0;
-        
        
       }
+   
+}
+
+@media screen and (min-width:768px) and (max-width: 1157px){
+  .foot > .container {
+    max-width: 552px;
+}    
 }
