--- a/css/styles.css
+++ b/css/styles.css
@@ -176,7 +176,7 @@ body {
 .main-sec {
   text-align: center;
   background: #2e2f42;
-  /* max-width: 1440px; */
+  max-width: 1440px;
   /* padding-top: 188px;
   padding-bottom: 188px; */
   padding-top: 72px;
@@ -186,17 +186,27 @@ body {
   margin-left: auto;
   background-image: linear-gradient(rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)),
-    url(../images/people-office.jpg);
+    url(../images/people.ofice.mobile1x..jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
 
+@media screen and (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 2dppx),
+  (min-resolution: 192dpi) {
+  .main-sec  {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)),
+  url(../images/people.ofice.mobile2x.jpg);
+  }
 }
 
 .glava {
   /* max-width: 496px; */
-  max-width: 216px;
+  width: 216px;
   font-weight: 700;
+  /* width: 100%; */
   /* font-size: 56px; */
   font-size: 36px;
   /* line-height: 1.07; */
@@ -209,6 +219,7 @@ body {
   /* margin-bottom: 48px; */
   margin-bottom: 72px;
 }
+
 
 .centered {
   display: flex;
@@ -984,6 +995,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    .container{
     max-width: 768px;
     padding: 0 16px;
+    width: 100%;
    }
                    /* ----------СЕКЦИЯ мейн----------- */
 
@@ -991,14 +1003,27 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
     padding-top: 112px;
     padding-bottom: 112px;
-  }Ї
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)),
+  url(../images/people.ofice.tab1x.jpg);
+  }
+
+  @media screen and (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 2dppx),
+  (min-resolution: 192dpi) {
+  .main-sec  {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)),
+  url(../images/people.ofice.tab2x.jpg);
+  }
+}
 
   .glava {
-    max-width: 496px;
+    width: 496px;
+   
     font-size: 56px;
     line-height: 1.07; 
     margin-bottom: 36px;
-    
   }
   
 
@@ -1095,6 +1120,29 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         max-width: 1158px;
         padding: 0 15px;
    }
+ /* ----------СЕКЦИЯ мейн----------- */
+ .main-sec {
+  max-width: 1440px; 
+   padding-top: 188px;
+  padding-bottom: 188px;
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+  rgba(46, 47, 66, 0.7)),
+url(../images/people-office.jpg);
+ }
+
+ @media screen and (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 2dppx),
+  (min-resolution: 192dpi) {
+  .main-sec  {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)),
+  url(../images/people-office\ 2x.jpg);
+}
+}
+ .glava{
+  margin-bottom: 48px; 
+ }
+
 
 /* ----------СЕКЦИЯ СТРАТЕГИЯ----------- */
 
