--- a/css/styles.css
+++ b/css/styles.css
@@ -43,9 +43,11 @@ body {
 .header {
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
+  
 }
 
 .nav {
+  
   display: flex;
   align-items: center;
 }
@@ -69,15 +71,23 @@ body {
 }
 
 .menu {
-  display: flex;
+  display: none;
+  /* display: flex; */
   gap: 40px;
   margin-right: 332px;
 }
+.menu-close-svg{
+  
 
+
+}
 .header-logo {
   margin-right: 76px;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  /* padding-top: 24px;
+  padding-bottom: 24px; */
+  padding-top: 16x;
+  padding-bottom: 16px;
+  margin-top: 16px;
 }
 
 .header-container {
@@ -139,7 +149,8 @@ body {
 }
 
 .menu-adress {
-  display: flex;
+  display: none;
+  /* display: flex; */
   gap: 40px;
 
 }
@@ -147,7 +158,31 @@ body {
 .list-adress {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.menu-open-content{
+  border: none;
+  background-color: transparent;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  display: block;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
 
+.menu-close-content{
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  border-color: none;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+stroke-width: 1px;
+stroke: #2e2f42;
+background-color: transparent;
+display: flex;
+align-items: center;
+justify-content: center;
+}
 .item-adress {
   display: block;
   font-style: normal;
@@ -169,6 +204,31 @@ body {
   color: #404bbf;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.mob-nav {
+}
+.mob-menu {
+   /* width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  background-color: #fff;
+  z-index: 11; */
+} 
+.mob-list {
+}
+.mob-list-item {
+}
+.mob-studio {
+}
+.mobil-menu-adress {
+}
+.mobile-contact-details-ul {
+}
+.mobil-menu-adress-title {
+}
+.link {
+}
+
 
 /* #endregion header */
 
@@ -186,7 +246,7 @@ body {
   margin-left: auto;
   background-image: linear-gradient(rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)),
-    url(../images/people.ofice.mobile1x..jpg);
+    url(../images/people-ofice-mobile1x.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -198,7 +258,7 @@ body {
   .main-sec  {
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
     rgba(46, 47, 66, 0.7)),
-  url(../images/people.ofice.mobile2x.jpg);
+  url(../images/people-ofice-mobile2x.jpg);
   }
 }
 
@@ -405,7 +465,7 @@ color: #2e2f42;
 
 .glad-list {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   gap: 24px;
 }
 
@@ -1008,15 +1068,15 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   url(../images/people.ofice.tab1x.jpg);
   }
 
-  @media screen and (-webkit-min-device-pixel-ratio: 2),
+   @media screen and (-webkit-min-device-pixel-ratio: 2),
   (min-resolution: 2dppx),
   (min-resolution: 192dpi) {
-  .main-sec  {
+  .main-sec{
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
     rgba(46, 47, 66, 0.7)),
   url(../images/people.ofice.tab2x.jpg);
   }
-}
+} */
 
   .glava {
     width: 496px;
@@ -1127,7 +1187,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding-bottom: 188px;
   background-image: linear-gradient(rgba(46, 47, 66, 0.7),
   rgba(46, 47, 66, 0.7)),
-url(../images/people-office.jpg);
+url(../images/people-office.desc.1x.jpg);
  }
 
  @media screen and (-webkit-min-device-pixel-ratio: 2),
@@ -1136,7 +1196,7 @@ url(../images/people-office.jpg);
   .main-sec  {
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
     rgba(46, 47, 66, 0.7)),
-  url(../images/people-office\ 2x.jpg);
+  url(../images/people-office.desc.2x.jpg);
 }
 }
  .glava{
